--- a/art/build.gradle
+++ b/art/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -109,6 +110,12 @@ dependencies {
     //test
     api rootProject.ext.dependencies["timber"]
     testImplementation rootProject.ext.dependencies["junit"]
+
+    //my lib
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api 'top.zibin:Luban:1.1.3'
+    api 'com.qmuiteam:qmui:1.0.7'
+    api rootProject.ext.dependencies["rxbinding2"]
 }
 
 
