--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 apply from: "config.gradle"
 
 buildscript {
+
+    ext.kotlin_version = '1.2.31'
+
     repositories {
         jcenter()
         google()
@@ -12,6 +15,8 @@ buildscript {
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         //Gradle Bintray Plugin
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
+        //kotlin Plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
