--- a/config.gradle
+++ b/config.gradle
@@ -3,7 +3,7 @@ ext {
     android = [
                compileSdkVersion       : 27,
                buildToolsVersion       : "27.0.3",
-               minSdkVersion           : 14,
+               minSdkVersion           : 16,
                targetSdkVersion        : 27,
                versionCode             : 81,
                versionName             : "2.4.1"
@@ -72,6 +72,7 @@ ext {
             "rxcache2"                  : "com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x",
             "rxpermissions2"            : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar",
             "rxerrorhandler2"           : "me.jessyan:rxerrorhandler:2.1.1",
+            "rxbinding2"               : "com.jakewharton.rxbinding2:rxbinding:2.1.0",
 
             //tools
             "dagger2"                  : "com.google.dagger:dagger:${version["dagger2SdkVersion"]}",
